--- a/react-games-frontend/package.json
+++ b/react-games-frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-games",
   "version": "0.1.0",
+  "homepage": "https://UGAM123.github.io/react-games",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
@@ -22,6 +24,8 @@
     "websocket": "^1.0.34"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
