--- a/react-games-backend/Dockerfile
+++ b/react-games-backend/Dockerfile
@@ -3,6 +3,6 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 FROM openjdk:17.0.1-jdk-slim
-COPY --from=build /target/reactgames.jar app.jar
+COPY --from=build /target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java",".jar","app.jar"]
